feat: add initial landing page structure with home, stats, skills, and companies sections

--- a/src/app/feature/home/landing/landing.html
+++ b/src/app/feature/home/landing/landing.html
@@ -911,7 +911,7 @@ Without your guidance, we genuinely wouldn’t have been able to achieve somethi
     
 <div class=" grid grid-cols-1 md:grid-cols-12 gap-2 items-center ">
       <!-- Right Content -->
-        <div class="space-y-10 col-span-4">
+        <div class="space-y-10 col-span-4  mb-0 md:mb-5">
           
           <!-- Phone -->
           <div data-aos="zoom-in" data-aos-duration="500" class="flex items-center gap-6">
